hermes_fuzz_executed_few_shot_v2/fuzz_48_execution
'use strict';
Array.prototype.some(function (x) { break }, 23);
 

Execution Output ------------------:
test.js:2:37: error: 'break' not within a loop or a switch
Array.prototype.some(function (x) { break }, 23);
                                    ^~~~~
